--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,8 +50,8 @@ jobs:
           timeZone: 8
           format: 'YYYY-MM-DD-HH-mm-ss'
 
-      Build and push Docker image with Buildx (don't push on PR)
-      https://github.com/docker/build-push-action
+      # Build and push Docker image with Buildx (don't push on PR)
+      # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
