--- a/Dockerfile_wordpress
+++ b/Dockerfile_wordpress
@@ -4,9 +4,10 @@ WORKDIR /var/www/html
 
 ENV TZ=Asia/Shanghai
 
-RUN <<EOF
-apt-get update \        
+RUN apt-get update \        
 apt-get install -y git
+
+RUN <<EOF
 git clone https://github.com/WordPress/sqlite-database-integration
 mv sqlite-database-integration wp-content/plugins/
 cp wp-content/plugins/sqlite-database-integration/db.copy wp-content/db.php
