--- a/Dockerfile_wordpress
+++ b/Dockerfile_wordpress
@@ -4,8 +4,7 @@ WORKDIR /var/www/html
 
 ENV TZ=Asia/Shanghai
 
-RUN apt-get update \        
-apt-get install -y git
+RUN apt-get update && apt-get install -y git
 
 RUN <<EOF
 git clone https://github.com/WordPress/sqlite-database-integration
