--- a/Dockerfile_wordpress
+++ b/Dockerfile_wordpress
@@ -5,6 +5,7 @@ WORKDIR /var/www/html
 ENV TZ=Asia/Shanghai
 
 RUN apt-get update && apt-get install -y git
+RUN ls -l
 
 RUN <<EOF
 git clone https://github.com/WordPress/sqlite-database-integration
